Promene poziva metoda iz Akcije