@@ -1,9 +1,7 @@
 package rs.edu.raf.banka.berza;
 
-import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -79,7 +77,7 @@ public class BerzaServiceTest {
         when(berzaRepository.findBerzaById(2L)).thenReturn(berza);
         when(orderService.saveOrder(17L, 1L, HartijaOdVrednostiType.AKCIJA,100,OrderAction.BUY,
                 10.0,1.4000000000000001,OrderType.MARKET_ORDER,true,false, "usd")).thenReturn(order);
-        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<Double>());
+        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<>());
 
         MakeOrderResponse makeOrderRes = berzaService.makeOrder(17L, "usd", "AKCIJA",
                 100, "buy", 0, 0, true, false);
@@ -109,7 +107,7 @@ public class BerzaServiceTest {
 //        when(berzaRepository.findBerzaById(2L)).thenReturn(berza);
         when(orderService.saveOrder(17L, 1L, HartijaOdVrednostiType.FUTURES_UGOVOR,100,OrderAction.BUY,
                 10.0,2.4,OrderType.STOP_LIMIT_ORDER,true,false,"usd")).thenReturn(order);
-        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<Double>());
+        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<>());
 
         MakeOrderResponse makeOrderRes = berzaService.makeOrder(17L, "usd", "FUTURES_UGOVOR",
                 100, "buy", 1, 1, true, false);
@@ -140,7 +138,7 @@ public class BerzaServiceTest {
 //        when(berzaRepository.findBerzaById(2L)).thenReturn(berza);
         when(orderService.saveOrder(17L, 1L, HartijaOdVrednostiType.FOREX,100,OrderAction.BUY,
                 10.0,2.4,OrderType.STOP_LIMIT_ORDER,true,false, "usd lol")).thenReturn(order);
-        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<Double>());
+        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<>());
 
         MakeOrderResponse makeOrderRes = berzaService.makeOrder(17L, "usd lol", "FOREX",
                 100, "buy", 1, 1, true, false);
@@ -170,7 +168,7 @@ public class BerzaServiceTest {
         when(berzaRepository.findBerzaById(2L)).thenReturn(berza);
         when(orderService.saveOrder(17L, 1L, HartijaOdVrednostiType.AKCIJA,100,OrderAction.BUY,
                 10.0,2.4,OrderType.STOP_LIMIT_ORDER,true,false, "usd")).thenReturn(order);
-        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<Double>());
+        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<>());
 
         MakeOrderResponse makeOrderRes = berzaService.makeOrder(17L, "usd", "AKCIJA",
                 100, "buy", 1, 1, true, false);
@@ -200,7 +198,7 @@ public class BerzaServiceTest {
         when(berzaRepository.findBerzaById(2L)).thenReturn(berza);
         when(orderService.saveOrder(17L, 1L, HartijaOdVrednostiType.AKCIJA,100,OrderAction.BUY,
                 10.0,2.4,OrderType.LIMIT_ORDER,true,false, "usd")).thenReturn(order);
-        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<Double>());
+        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<>());
 
         MakeOrderResponse makeOrderRes = berzaService.makeOrder(17L, "usd", "AKCIJA",
                 100, "buy", 1, 0, true, false);
@@ -230,7 +228,7 @@ public class BerzaServiceTest {
         when(berzaRepository.findBerzaById(2L)).thenReturn(berza);
         when(orderService.saveOrder(17L, 1L, HartijaOdVrednostiType.AKCIJA,100,OrderAction.BUY,
                 10.0,2.4,OrderType.STOP_ORDER,true,false, "usd")).thenReturn(order);
-        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<Double>());
+        when(transakcijaService.findPriceActionBuy(any())).thenReturn(new ArrayList<>());
 
         MakeOrderResponse makeOrderRes = berzaService.makeOrder(17L, "usd", "AKCIJA",
                 100, "buy", 0, 1, true, false);
@@ -270,9 +268,9 @@ public class BerzaServiceTest {
     void testFindAkcije() {
         String symbol = "Simbol";
         Akcije akcija = new Akcije();
-        akcija.setOpis_hartije("MojOpis");
+        akcija.setOpisHartije("MojOpis");
         when(akcijeRepository.findAkcijeByOznakaHartije(symbol)).thenReturn(akcija);
-        assertEquals("MojOpis", berzaService.findAkcije(symbol).getOpis_hartije());
+        assertEquals("MojOpis", berzaService.findAkcije(symbol).getOpisHartije());
     }
 
     @Test
@@ -489,7 +487,7 @@ public class BerzaServiceTest {
         order.setAON(false);
         Double ask = 12.00;
         Double bid = 1.00;
-        List<Double> cene = new ArrayList<>(Arrays.asList(1.0, 2.0, 3.0));
+        List<Double> cene = new ArrayList<>(List.of(1.0, 2.0, 3.0));
         when(transakcijaService.findPriceActionBuy(ask)).thenReturn(cene);
         assertTrue(cene.contains(berzaService.getPrice(ask, bid, OrderAction.SELL)));
     }
